Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello coursera</h1>
+<h1>Hello coursera. Now I know how to add things in my website</h1>
 </body>
 </html>
